--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,17 @@
   
   <groupId>com.exxeta.jobstore</groupId>
   <artifactId>parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>pom</packaging>
   <name>parent</name>
+  <description>Contains all modules associated with a Quartz JobStore using a distributed key/value store.</description>
+  
+  <licenses>
+  	<license>
+  		<name>Apache License, Version 2.0</name>
+  		<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+  	</license>
+  </licenses>
   
   <modules>
   	<module>core</module>
