--- a/infinispan-quartz-demo/pom.xml
+++ b/infinispan-quartz-demo/pom.xml
@@ -5,9 +5,7 @@
         <artifactId>parent</artifactId>
         <version>1.0</version>
     </parent>
-    <artifactId>infinispan</artifactId>
-    <description>Implements the core library for Infinispan.</description>
-
+    <artifactId>infinispan-quartz-demo</artifactId>
 
     <licenses>
         <license>
@@ -18,8 +16,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.exxeta.jobstore</groupId>
+            <artifactId>spring-boot-infinispan-quartz-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.infinispan</groupId>
-            <artifactId>infinispan-core-jakarta</artifactId>
+            <artifactId>infinispan-spring-boot3-starter-embedded</artifactId>
             <version>${infinispan.version}</version>
         </dependency>
         <dependency>
@@ -28,24 +35,8 @@
             <version>${infinispan.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.exxeta.jobstore</groupId>
-            <artifactId>core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito-core.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
