--- a/spring-boot-infinispan-quartz-starter/pom.xml
+++ b/spring-boot-infinispan-quartz-starter/pom.xml
@@ -5,9 +5,7 @@
         <artifactId>parent</artifactId>
         <version>1.0</version>
     </parent>
-    <artifactId>infinispan</artifactId>
-    <description>Implements the core library for Infinispan.</description>
-
+    <artifactId>spring-boot-infinispan-quartz-starter</artifactId>
 
     <licenses>
         <license>
@@ -18,24 +16,24 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.infinispan</groupId>
-            <artifactId>infinispan-core-jakarta</artifactId>
-            <version>${infinispan.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.infinispan</groupId>
-            <artifactId>infinispan-component-annotations</artifactId>
-            <version>${infinispan.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.exxeta.jobstore</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>infinispan</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
